Refactor api server configuration and app component logic
